--- a/docs/reference-guide/modules/migration/pages/paths/index.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/index.adoc
@@ -176,7 +176,7 @@ to
 |===
 ====
 
-For an exhaustive list of all class-level renames and moves, please refer to the `api-changes.md` file in the root of the Axon Framework repository.
+For an exhaustive list of all class-level renames and moves, please refer to the https://github.com/AxonFramework/AxonFramework/blob/main/axon-5/api-changes.md[`api-changes.md`] file in the root of the Axon Framework repository.
 
 === Module restructuring
 
